PERN-Store/node.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  namespace: pern-store
  labels:
    app: backend
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: gerrome/pern-store-app_server:1
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: pern-store
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: http
    port: 80
    targetPort: 9000
