PERN-Store/postgres.yml
apiVersion: v1
kind: Service 
metadata:
  name: postgres
  namespace: pern-store
  labels:
    app: postgres  
spec:
   selector:
      app: postgres
   ports:
      - protocol: TCP
        port: 5432
        targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: pern-store  
spec:
   serviceName: postgres
   replicas: 1
   selector:
    matchLabels:
      app: postgres
   template:
    metadata:
      labels:
        app: postgres
        selector: postgres
    spec:
      containers:
        - name: postgres-container
          image: gerrome/pern-store-app_postgres:1
          ports: 
            - containerPort: 5432
          volumeMounts:
            - name: p-vc
              mountPath: /data/postgresdb
   volumeClaimTemplates:
      - metadata:
          name: p-vc
        spec: 
          accessModes:
            - ReadWriteOnce
          resources:
            requests:
              storage: 1Gi
