PERN-Store/react.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  namespace: pern-store
  labels:
    app: client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: react-container
        image: gerrome/pern-store-app_client:1.4
        imagePullPolicy: Always        
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: pern-store  
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - name: http
    port: 80
    targetPort: 3000
